tests/fixtures/negative/output_param_inout.logic.cpp
#include <fixint.hpp>

void hls_main(Int<8>& out) {
    out = out + Int<8>(1);
}
